--- a/app/views/layouts/category.html.erb
+++ b/app/views/layouts/category.html.erb
@@ -10,8 +10,8 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
     <%= display_meta_tags %>
     <%= csrf_meta_tags %>
-    <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <%= stylesheet_link_tag 'application', media: 'all' %>
+    <%= javascript_include_tag 'application' %>
     <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     <script>
       (adsbygoogle = window.adsbygoogle || []).push({
@@ -36,7 +36,8 @@
       <a href="/categories/personal-stories">Personal Stories</a>
       <a href="/contacts/new">Contact</a>
       <% if current_user && (current_user.admin? || current_user.editor?) %>
-        <%= link_to "Users", users_path %>
+        <%= link_to "Writers", users_path %>
+        <%= link_to "Editing", reviews_path %>
       <% end %>
       <% if user_signed_in? %>
          <%= link_to "Pitches", pitches_path %>
@@ -77,7 +78,8 @@
               <a class="link" href="/categories/entertainment">Entertainment</a>
               <a class="link" href="/categories/fashion">Fashion</a>
               <% if current_user && (current_user.admin? || current_user.editor?) %>
-                <%= link_to "Users", users_path, class: "link" %>
+                <%= link_to "Writers", users_path, class: "link" %>
+                <%= link_to "Editing", reviews_path, class: "link" %>
               <% end %>
               <% if user_signed_in? %>
                 <%= link_to "Pitches", pitches_path, class: "link" %>
