--- a/app/views/pages/subscribe.html.erb
+++ b/app/views/pages/subscribe.html.erb
@@ -55,7 +55,7 @@
             <div class="ctgry_article">
               <%=link_to(image_tag(post.thumbnail.url(:large2), alt: post.title), post )%>
               <h1><%= link_to post.title, post %></h1>
-              <p><%= post.created_at.strftime("%A, %b %d")%></p>
+              <p><%= post.publish_at.strftime("%A, %b %d")%></p>
               <p class="meta"><%= post.meta_description.truncate_words(15) %></p>
             </div>
           <% end %>
