--- a/app/views/users/_profile_nolink.html.erb
+++ b/app/views/users/_profile_nolink.html.erb
@@ -18,7 +18,7 @@
     <% end %>
     <div class="website">
       <% if (@user.website != "" && @user.website !=  nil) %>
-         <p class="website_link"><span>Website: </span><a href="<%= @user.website %>" target="_blank"><%= @user.website %></a></p>
+         <p class="website_link"><span>Website: </span><a href="https://www.<%= @user.website %>" target="_blank"><%= @user.website %></a></p>
       <% end %>
       <% if (@user.twitter != "" && @user.twitter !=  nil) %>
          <p class="website_link"><a href="<%= @user.twitter %>" target="_blank"><i class="fa fa-twitter" aria-hidden="false"></i></a></p>
