--- a/app/views/users/onboarding/_profile_preview.html.erb
+++ b/app/views/users/onboarding/_profile_preview.html.erb
@@ -1,13 +1,13 @@
 <% @page = "next_steps" %>
 <div class="stair_step">
   <a href="/onboarding?page=welcome" class="node">
-    <span class="progress">
+    <span class="progress_step">
       &#x25cf;
       <p>Welcome</p>
     </span>
   </a>
   <a href="/onboarding?page=your_profile" class="node">
-    <span class="progress">
+    <span class="progress_step">
       &#x25cf;
       <p>Your Profile</p>
     </span>
