--- a/app/assets/stylesheets/_common.css.scss
+++ b/app/assets/stylesheets/_common.css.scss
@@ -30,7 +30,7 @@ html, body {
 }
 
 .bodywrapper {
-  min-height: 100%;
+  min-height: 80%;
 }
 
 .showContent {
@@ -354,8 +354,10 @@ footer {
 
 .notice, .alert {
   text-align: center;
-  padding: 1em 0;
+  padding: 0.9em 0;
   border-bottom: 1px solid #E9E9E9;
+  color: #212529;
+  background-color: #C5B7B820;
 }
 
 #main_title {
@@ -507,6 +509,17 @@ body {
     padding: 0;
     width: 100%;
   }
+}
+
+.banner_stts {
+  position: absolute;
+  z-index: 100;
+  width: 100%;
+  text-align: center;
+  color: white;
+  background-color: #FF78CB;
+  font-size: 17px;
+  padding: 2px;
 }
 
 .fb-comments, .fb-comments iframe[style], .fb-comments span {
@@ -754,9 +767,6 @@ body {
     padding-top: 5px;
   }
 
-  a:hover {
-    color: #424653;
-  }
   nav {
     float: right;
     i {
