--- a/app/views/applies/new.html.erb
+++ b/app/views/applies/new.html.erb
@@ -5,18 +5,16 @@ pintrk('track', 'pagevisit');
 <!-- let someone create an application; sends to editor -->
 
 <div class="form_wrapper wrapper_padding">
-  <h1>Interested in getting a jump-start on your future career today? Join the TTM Writer Community.</h1>
-  <p>Here at The Teen Magazine, we are a close-knit group of young college and high school writers who work closely with one another to improve journalism skills,
-    gain writing experience, and receive quality feedback from top-tier student journalists. Here is a video of TTM's founder and Editor in Chief explaining who we are a bit more!</p>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/9dsKTqtu1bw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-<br />
-<h1>What Does it Mean to be a Writer for The Teen Magazine?</h1>
+  <h3>Join the TTM Writer Team!</h3>
+  <p>We are a close-knit group of young college and high school writers who work closely with one another to improve journalism skills,
+    gain writing experience, and receive quality feedback from top-tier student journalists.</p>
+<h3>What Does it Mean to be a Writer for The Teen Magazine?</h3>
 <p>As a writer for The Teen Magazine, you will get the opportunity to:  </p>
 <ul>
   <li>Pitch article topics and get published in an international online magazine</li>
   <li>Have your own public author page that you can share with potential employers</li>
   <li>Gain applicable experience and training in the editorial industry</li>
-  <li>Be paired with a mentor who can give you feedback and guidance</li>
+  <li>Give and receive feedback from your peers.</li>
   <li>Interview successful people and work with brands</li>
   <li>Learn from and network with our talented writer community</li>
   <li>Apply for other positions and internships within The Teen Magazine</li>
