--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -16,7 +16,7 @@
              <div class="thumbnail--container">
                <p class="date"><%= post.category.name %></p>
                <h3 class="article_title"><a href="#"><%= link_to post.title, post %></a></h3>
-               <p class="date"><%= post.created_at.strftime("%A, %b %d")%></p>
+               <p class="date"><%= post.publish_at.strftime("%A, %b %d")%></p>
              </div>
            </div>
          <% end %>
