--- a/app/views/layouts/minimal.html.erb
+++ b/app/views/layouts/minimal.html.erb
@@ -28,7 +28,8 @@
       <a href="/categories/personal-stories">Personal Stories</a>
       <a href="/contacts/new">Contact</a>
       <% if current_user && (current_user.admin? || current_user.editor?) %>
-        <%= link_to "Users", users_path %>
+        <%= link_to "Writers", users_path %>
+        <%= link_to "Editing", reviews_path %>
       <% end %>
       <% if user_signed_in? %>
          <%= link_to "Pitches", pitches_path %>
@@ -41,6 +42,11 @@
       </div>
     </div>
     <div class="bodywrapper">
+      <% if notice %>
+        <p class="notice"><%= notice %></p>
+        <% elsif alert %>
+        <p class="alert"><%= alert %></p>
+      <% end %>
       <header id="main_navigation" class="clearfix">
         <div id="banner">
           <div class="logo--flex banner_item" style="margin-top: 0;">
@@ -63,12 +69,12 @@
             <nav class="nav_article">
               <%= link_to "The Teen Magazine", root_path, class: "nav-title"%>
               <% if current_user && (current_user.admin? || current_user.editor?) %>
-                <%= link_to "Users", users_path, class: "link" %>
+                <%= link_to "Writers", users_path, class: "link" %>
+                <%= link_to "Editing", reviews_path, class: "link" %>
               <% end %>
               <% if user_signed_in? %>
                 <%= link_to "Pitches", pitches_path, class: "link" %>
                 <%= link_to "Dashboard", user_path(current_user), class: "link" %>
-                <%= link_to "Sign Out", destroy_user_session_path, method: :delete, class: "link" %>
               <% else %>
                   <a class="link" href="/contacts/new">Contact</a>
                   <a class="link" href="/apply">Apply</a>
@@ -77,11 +83,6 @@
           </div>
         </div>
       </header>
-      <% if notice %>
-        <p class="notice"><%= notice %></p>
-        <% elsif alert %>
-        <p class="alert"><%= alert %></p>
-      <% end %>
       <%= yield %>
     </div>
     <footer id="main_footer">
