--- a/app/views/pages/team.html.erb
+++ b/app/views/pages/team.html.erb
@@ -17,11 +17,11 @@
        <% if user.editor == true %>
            <div class="featured">
              <% if user.profile.exists? %>
-               <%= image_tag(user.profile.url(:square), :class => "profile_img") %>
+               <%= link_to(image_tag(user.profile.url(:square), :class => "profile_img"), user) %>
              <% else %>
-               <%= image_tag("profile_image", :class => "profile_img") %>
+               <%= link_to(image_tag("profile_image", :class => "profile_img"), user) %>
              <% end %>
-             <h6><%= user.full_name %></h6>
+             <h6><%= link_to(user.full_name, user, class: "link_nrml") %></h6>
            </div>
        <% end %>
     <% end %>
@@ -32,11 +32,11 @@
        <% if Post.where(user_id: user.id).exists? %>
             <div class="featured">
               <% if user.profile.exists? %>
-                <%= image_tag(user.profile.url(:square), :class => "profile_img") %>
+                <%= link_to(image_tag(user.profile.url(:square), :class => "profile_img"), user) %>
               <% else %>
-                <%= image_tag("profile_image", :class => "profile_img") %>
+                <%= link_to(image_tag("profile_image", :class => "profile_img"), user) %>
               <% end %>
-              <h6><%= user.full_name %></h6>
+              <h6><%= link_to(user.full_name, user, class: "link_nrml") %></h6>
             </div>
        <% end %>
     <% end %>
