--- a/app/views/pitches/index.html.erb
+++ b/app/views/pitches/index.html.erb
@@ -1,6 +1,7 @@
-<div class="skinny_wrapper wrapper_padding">
+<div class="skinny_wrapper wrapper_padding pitches_wrapper">
   <h1 class="pitch_ttl">Editor Pitches</h1>
   <i>When you claim an article idea, the pitch will show up as claimed in your dashboard, and a new draft will be started. You will have two weeks to submit your article for review. If your article is not submitted within two weeks and/or not approved within one month of claiming the topic, the pitch will become unclaimed and any writer can claim it. If another writer claims the pitch during that time, your article will become locked and you will no longer be able to make changes to it.</i>
+  <br><br>
   <div class="flex-wrapper">
     <% @pitches.each do |pitch| %>
       <div class="card" style="width: 32%;">
