--- a/app/views/pitches/show.html.erb
+++ b/app/views/pitches/show.html.erb
@@ -7,25 +7,15 @@
   <h3 class="pitch_ttl"><%= @pitch.title %></h3>
   <p class="pitch_usr">Pitched by <%= link_to(@pitch.user.full_name, @pitch.user, class: "pitch_btn") %> under <%= link_to(@pitch.category.name, @pitch.category, class: "pitch_btn") %></p>
   <%= image_tag(@pitch.thumbnail, class: "thumbnail_img") %><br/><br />
+  <%= markdown @pitch.description %>
 
   <% if @claimed_user.nil? %>
-    <script>
-     CKEDITOR.addCss('img{width: 55% !important; height: auto !important;margin-left: auto !important;margin-right: auto !important;display: block;}');
-     CKEDITOR.addCss('iframe{margin: 0 auto !important;}');
-     CKEDITOR.addCss('p, h1, h2, h3, h4, h5, h6, span {font-family: "Source Sans Pro", sans-serif !important};');
-     CKEDITOR.addCss('html {margin-left: auto;margin-right: auto;}#twitter-widget-0, #twitter-widget-1 {margin: 0 auto !important;}a {color: #65B19D;}a:hover {opacity: 0.5;}@media (max-width: 600px) {img {width: 100% !important;}}');
-    </script>
     <%= form_for @post do |f| %>
-      <%= f.label :title %>
-      <%= f.text_field :title %>
-
-      <%= f.label :content, "Write your article here" %><br>
-      <%= f.cktext_area :content %><br />
-
+      <%= f.hidden_field :title, value: @pitch.title %>
+      <%= f.hidden_field :content, value: @pitch.description %>
       <%= f.hidden_field :category_id, value: @pitch.category_id %>
       <%= f.hidden_field :pitch_id, value: @pitch.id %>
-
-      <%= f.submit "Claim Article" %>
+      <%= f.submit "Claim Article Pitch", data: { confirm: "You will have two weeks to write and submit this article." } %>
     <% end %>
   <% else %>
     <span><%= @pitch.description %></span>
