--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -11,8 +11,13 @@
 <% end %>
 
 <div class="div">
-  <% if !@post.approved %>
-    <p class="banner_stts">DRAFT</p>
+  <% if !(@post.is_published?) %>
+    <% @most_recent_review = @post.reviews.last %>
+    <% if !@most_recent_review.nil? && !(@most_recent_review.try(:status).eql? "In Progress") %>
+      <%= render '/posts/banner_status' %>
+    <% else %>
+      <p class="banner_stts">DRAFT</p>
+    <% end %>
   <% end %>
   <div class="post_image">
   </div>
@@ -47,7 +52,7 @@
             </div>
           </div>
           <i class="fa fa-clock-o" style="margin-right: 3px;" aria-hidden="true"></i>
-          <p class="date"><%= @post.created_at.strftime('%A, %B %d')%></p>
+          <p class="date"><%= @date.strftime('%A, %B %d')%></p>
         </div>
         <div class="social_icons">
           <a class="fb-share" href="//www.facebook.com/v2.3/dialog/feed?app_id=1190455601051741
@@ -88,13 +93,6 @@
             <%= link_to "Edit Article", edit_post_path(@post) %>
             <% if current_user && (current_user.id == @post.user_id || current_user.admin) %>
             <%= link_to "Delete", post_path(@post), method: :delete, data: {confirm: "Are you sure you want to delete this post?"} %>
-            <% end %>
-            <% if current_user && current_user.admin? %>
-                  <span style="color: #9a9da4;"><span style="padding-right: .5em;"> | </span> <%= @post.post_impressions %> views
-                  <% if @post.ranking != nil%>
-                    -- rank <%= @post.ranking %>
-                  <% end %></span>
-                  <%= @post.category_id %>
             <% end %>
           </div>
         <% end %>
@@ -179,7 +177,7 @@
           <div class="flex_other_articles">
             <h3 class="title">Trending in <%= link_to(@post.category.name, @post.category) %></h3>
             <div class="contain_articles">
-              <% @post.category.posts.approved.limit(12).order("post_impressions desc")[0..6].each do |post| %>
+              <% @post.category.posts.published.limit(12).order("post_impressions desc")[0..6].each do |post| %>
                 <div class="ctgry_article">
                    <%= link_to(image_tag(post.thumbnail.url(:medium)), post) %>
                   <div class="paragraph">
