--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -59,7 +59,7 @@
 
   <% @full = @user.first_name + " " + @user.last_name %>
   <%= f.hidden_field :full_name, :value => @full %>
-  <%= f.hidden_field :posts_count, :value => @user.posts.approved.count %>
+  <%= f.hidden_field :posts_count, :value => @user.posts.published.count %>
 
   <% if current_user && current_user.admin? %>
   <%= f.label "Editor" %>
