--- a/app/views/users/dashboard/_official_writer.html.erb
+++ b/app/views/users/dashboard/_official_writer.html.erb
@@ -1,101 +1,58 @@
-<% if current_user && (current_user.id == @user.id || current_user.admin) %>
-  <% @pageviews = 0 %>
-  <% @user_posts.each do | post | %>
-    <% if post.post_impressions != nil %>
-      <% @pageviews = @pageviews + post.post_impressions %>
-    <% end %>
-  <% end %>
-  <% if @user.monthly_views == nil %>
-    <% @user.monthly_views = 0 %>
-    <% @user.save %>
-  <% end %>
-  <% @rank = @rankings.index(@user.id) + 1 %>
-  <div id="posts_wrapper" class="skinny_wrapper" style="padding-top: 0px;">
-  <% if @user.monthly_views != 0 %>
-  <div class ="flex--ranking">
-  <h1 id="page_title">Your Rank: <%= @rank %></h1>
-    <% if @rank != 1 %>
-      <% @impressions_to_get = 0 %>
-      <% @compare_user %>
-      <% @counter = @rank - 1 %>
-      <% while @impressions_to_get = 0 %>
-        <% @compare_user = User.find(@rankings[@counter]) %>
-        <% @impressions_to_get = @compare_user.monthly_views - @user.monthly_views %>
-        <% @counter = @counter - 1 %>
-        <% if @impressions_to_get != 0 %>
-          <div><p style="font-weight: 300; font-size: 18px;"><span style="font-weight: 400;"><%= @impressions_to_get + 1 %></span> more page views to reach rank <%= @rankings.index(@compare_user.id) + 1 %></p>
-          <% break %>
-        <% end %>
-      <% end %>
-    <% else %>
-      <div><p style="font-weight: 300; font-size: 18px;">Congratulations! You are ranked first out of <%=User.count%> writers.</p>
-    <% end %>
-    <h1 id="page_title" style="margin-top: -20px; padding-top: 0; font-size: 11px;"><span style="font-weight: 400;">Lifetime Views:
-      <%= @pageviews %></span> | Monthly Views: <%= @user.monthly_views %></h1></div>
-  </div>
-  <% else %>
-  <h1 id="page_title" style="margin-top: -20px; border-bottom: none;">
-  <span style="font-weight: 400;">Lifetime Views: <%= @pageviews %></span> | Monthly Views: <%= @user.monthly_views %></h1>
-  <p style="text-align: center; margin-top: -50px; font-size: 15px;">In order to see your rank for this month, your monthly views cannot be 0.</p><% end %>
-
-<% else %>
-<br />
-<% end %>
-  <div id="background">
-    <%= render 'profile' %>
-  </div>
-
-<% if current_user && (current_user.id == @user.id || current_user.admin) %>
-    <div class="flex--p">
-      <p>You're signed in as <%= @user.email %></p>
-      <p class="editlink--profile"><%= link_to "Edit Profile", edit_user_path(@user) %></p>
-    </div>
-    <h1 id="page_title">Your Articles</h1>
-
-      <% @user_posts.each do |post| %>
-      <div class="flex--postlist--item">
-        <div class="inside--item">
-          <% if post.approved && post.after_approved == true %>
-          <%= image_tag "published.png", class: "icon" %>
-          <% elsif post.waiting_for_approval && (post.approved == nil || post.approved == false) %>
-          <%= image_tag "waiting.png", class: "icon" %>
-          <% elsif post.approved && post.after_approved == nil %>
-          <%= image_tag "approved.png", class: "icon" %>
-          <% else %>
-          <%= image_tag "saved.png", class: "icon" %>
-          <% end %>
-            <h6 id="post-title"><a href="#"><%= link_to post.title, post%></a></h6>
+<div class="official--writer--wrapper">
+  <div class="skinny_wrapper">
+    <div id="waiting--for--approval">
+      <div style="padding-top: 30px; width: 100%;">
+        <div class="flex--item">
+          <%= render 'profile' %>
         </div>
-        <h6 id="date"><%= post.created_at.strftime('%A, %B %d') %></h6>
-      </div>
-      <% end %>
-      <p><%= link_to "New Post", new_post_path(@post), :class => "newpost--profile" %></p>
-      <% @userHasCollaboration = false %>
-      <% @posts.each do |post| %>
-        <% if post.collaboration == @user.email %>
-          <% if @userHasCollaboration == false %>
-            <h1 id="page_title">Your Collaborations</h1>
-            <% @userHasCollaboration = true %>
+        <div class="dashboard--articles--wrapper">
+          <% if @user_posts.rejected.present? %>
+            <h6 class="header_ttl">Changes Requested</h6>
+            <%= render "/users/partials/dashboard_articles", articles: @user_posts.rejected, image: "saved.png" %>
           <% end %>
-          <div class="flex--postlist--item">
-            <div class="inside--item">
-              <% if post.approved && post.after_approved == true %>
-              <%= image_tag "published.png", class: "icon" %>
-              <% elsif post.waiting_for_approval && (post.approved == nil || post.approved == false) %>
-              <%= image_tag "waiting.png", class: "icon" %>
-              <% elsif post.approved && post.after_approved == nil %>
-              <%= image_tag "approved.png", class: "icon" %>
-              <% else %>
-              <%= image_tag "saved.png", class: "icon" %>
-              <% end %>
-                <h6 id="post-title"><a href="#"><%= link_to post.title, post%></a></h6>
-            </div>
-            <h6 id="date"><%= post.created_at.strftime('%A, %B %d') %></h6>
+          <% if @user_posts.scheduled_for_publishing.present? %>
+            <h6 class="header_ttl">Pending Publication</h6>
+            <%= render "/users/partials/dashboard_articles", articles: @user_posts.scheduled_for_publishing, image: "published.png" %>
+          <% end %>
+          <% if @user_posts.in_review.present? %>
+            <h6 class="header_ttl">Articles In Review</h6>
+            <%= render "/users/partials/dashboard_articles", articles: @user_posts.in_review, image: "waiting.png" %>
+          <% end %>
+          <% if @user_posts.submitted.present? %>
+            <h6 class="header_ttl">Pending Review</h6>
+            <%= render "/users/partials/dashboard_articles", articles: @user_posts.submitted, image: "waiting.png" %>
+          <% end %>
+
+          <h6 class="header_ttl">Articles In Progress</h6>
+          <%= render "/users/partials/dashboard_articles", articles: @user_posts.draft, image: "saved.png" %>
+          <br>
+          <%= link_to "New Article", new_post_path(@post), class: "newpost--new--profile" %>
+        </div>
+      </div>
+      <div class="dashboard--writer--flex--two">
+        <div class="links">
+          <div>
+            <a href="/users/<%= @user.slug %>/edit">Edit Profile</a>
+            <%= link_to("Change Password", edit_user_registration_path) %>
+            <%= link_to("Review Onboarding", onboarding_path(:page => "welcome")) %>
+            <%= link_to("Editor Pitches", pitches_path) %>
+            <%= link_to "Sign Out", destroy_user_session_path, method: :delete %>
           </div>
-        <% end %>
-      <% end %>
+        </div>
+        <br />
+        <div class="card" style="width: 18rem;">
+          <div class="card-header">
+            What's New
+          </div>
+          <ul class="list-group list-group-flush">
+            <li class="list-group-item">Cras justo odio</li>
+            <li class="list-group-item">Dapibus ac facilisis in</li>
+            <li class="list-group-item">Vestibulum at eros</li>
+          </ul>
+        </div>
+      </div>
+    </div>
   </div>
-  <br />
   <div class="guidelines">
     <div class="thelink">
       <a href="/criteria">
@@ -126,29 +83,4 @@
       </a>
     </div>
   </div>
-<% else %>
-<div class="category">
-   <div class="category--show">
-     <div class="other--articles">
-       <div class="flex">
-         <div class="container">
-           <% @user_posts_approved.each do |post| %>
-             <div class="thumbnail">
-               <div class="container--image">
-                 <%=link_to(image_tag(post.thumbnail.url(:large2), :class => "image_thumbnail"), post )%>
-               </div>
-               <div class="thumbnail--container">
-                 <p class="date"><%= post.category.name %></p>
-                 <h3 class="article_title"><a href="#"><%= link_to post.title, post %></a></h3>
-                 <p class="date"><%= post.created_at.strftime("%A, %b %d")%></p>
-               </div>
-             </div>
-           <% end %>
-         </div>
-         <a class="apply" href="/apply" target="blank">
-         </a>
-       </div>
-     </div>
-   </div>
 </div>
-<% end %>
