--- a/app/views/users/onboarding.html.erb
+++ b/app/views/users/onboarding.html.erb
@@ -2,5 +2,5 @@
 <div class="skinny_wrapper onboarding">
   <h1>Welcome to The Teen Magazine Writer Team!</h1>
   <p>Please complete the onboarding process.</p>
-      <%= render "users/partials/#{@partial}" %>
+      <%= render "users/onboarding/#{@partial}" %>
 </div>
