--- a/app/views/users/onboarding/_welcome.html.erb
+++ b/app/views/users/onboarding/_welcome.html.erb
@@ -1,5 +1,5 @@
 <div class="stair_step">
-  <span class="progress">◦<p>Welcome</p></span>
+  <span class="progress_step">◦<p>Welcome</p></span>
   <span>◦<p>Your Profile</p></span>
   <span>◦<p>Next Steps</p></span>
   <div class="hr">
@@ -31,7 +31,7 @@
             Gain applicable experience and training in the editorial industry
           </li>
           <li>
-            Be paired with a mentor who can give you feedback and guidance
+            Give and receive feedback from your peers
           </li>
           <li>
             Interview successful people and work with brands
